--- a/frontend/delta/scss/style/card.scss
+++ b/frontend/delta/scss/style/card.scss
@@ -308,7 +308,7 @@ $cardViewBasePadding: 10px;
 
 			.directLoginLabel {
 				vertical-align: bottom;
-				padding-left: 4px;
+				padding-left: 17px;
 			}
 		}
 	}
